--- a/Cap11/style/jockey.css
+++ b/Cap11/style/jockey.css
@@ -4,3 +4,7 @@ pre { font-style: italic; font-size: 1.1em;}
 figure { display: inline-block; font-size: 0.7em; margin: 5px; }
 img.poltrona { width: 24; height: 16px; }
 .entre-letras { letter-spacing: 0.5em; }
+
+figure {
+    margin: 0px 5px 1rem;
+}
